# sensordashboard

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Model/: SensorModel.cpp  SensorModel.h
controller/: SensorController.cpp  SensorController.h
qml/: Aqigraph.qml  CircularMeter  Main  UVgraph
